test/scc/expr/semantic-errors/160.a
160.t:1:18: error: initialization from incompatible pointer types